objects/CACI_Delete_Data__c.object
<CustomObject>
    <fields>
        <fullName>CACI__c</fullName>
        <label>CACI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>